data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3380.wast
;; 9. **Unreachable Code Paths within Nested Loops**:    - **Description**: Set up deeply nested loops, where each contains `call` instructions leading to functions with unreachable code based on conditional branches.    - **Reason**: This examines proper exit from deeply nested loops using unreachable code. Mismanagement can lead to infinite loop conditions.

(assert_invalid
  (module
    (type $funcType (func (param i32)))
    (func $nested_loops
      (loop $outer
        (i32.const 1)
        (br_if 1 (i32.const 0))
        (call 1)
        (loop $inner
          (i32.const 2)
          (br_if 1 (i32.const 0))
          (call 1)
          (br 0)
        )
        (br 0)
      )
    )
    (func (param i32) (unreachable))
  )
  "unreachable code"
)